# PaddleForecastAI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
app/core/: handlers.py  weather_advisor.py
app/data/: models.py  request.py
app/services/: weather.py
app/tools/: utils.py
